--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 rust-latest:       
   stage: build
   script:
-    - curl https://sh.rustup.rs -sSf | sh -s -- -y
+    #- curl https://sh.rustup.rs -sSf | sh -s -- -y
     - cargo build --release
 
 rust-msrv:       
