--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 [dependencies]
 lazy_static = "1.4.0"
 log = "0.4.21"
+simplelog = "0.12.2"
 thiserror = "1.0.60"
 
 [dev-dependencies]
