--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -9,3 +9,4 @@ simplelog = "0.12.2"
 thiserror = "1.0.60"
 wasm-types = { path = "../wasm-types" }
 ir = { path = "../ir" }
+loader = { path = "../loader" }
