--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,3 +1,3 @@
 [target.x86_64-unknown-linux-gnu]
-linker = "/usr/bin/clang"
-rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
+linker = "/usr/bin/clang-18"
+rustflags = ["-Clink-arg=-fuse-ld=lld-18", "-Clink-arg=-Wl,--no-rosegment"]
