--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "thirdparty/spec"]
 	path = thirdparty/spec
-	url = https://github.com/WebAssembly/spec/
+	url = git@github.com:WebAssembly/spec.git
