--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ wasm-types = { path = "./wasm-types" }
 parser = { path = "./parser" }
 loader = { path = "./loader" }
 interpreter = { path = "./interpreter" }
+llvm-gen = { path = "./llvm-gen" }
 ir = { path = "./ir" }
 log = "0.4.21"
 runtime-interface = { version = "0.1.0", path = "runtime-interface" }
