--- a/llvm-gen/Cargo.toml
+++ b/llvm-gen/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+ir = { version = "0.1.0", path = "../ir" }
+thiserror = "1.0.61"
+wasm-types = { version = "0.1.0", path = "../wasm-types" }
+llvm-sys = { package = "llvm-sys", version = "181.0.0", features = ["prefer-dynamic"] }
+log = "0.4.21"
+libc = "0.2.155"
+once_cell = "1.19.0"
+runtime-interface = { path = "../runtime-interface" }
