--- a/sightglass-connector/Cargo.toml
+++ b/sightglass-connector/Cargo.toml
@@ -8,5 +8,5 @@ crate-type = ["cdylib"]
 
 [dependencies]
 anyhow = "1.0.86"
-ir = { version = "0.1.0", path = "../../ir" }
-runtime-lib = { version = "0.1.0", path = "../../runtime-lib" }
+ir = { version = "0.1.0", path = "../ir" }
+runtime-lib = { version = "0.1.0", path = "../runtime-lib" }
