--- a/benchmarks/Cargo.toml
+++ b/benchmarks/Cargo.toml
@@ -12,16 +12,26 @@ criterion = "0.3"
 wasmparser = "0.207.0"
 wasmtime = "22.0.0"
 wasmedge-sdk = { version = "0.13.0", default-features = false, features = ["standalone"] }
+iai-callgrind = "0.12.0"
 
 [profile.release]
 debug = true
+strip = false
+
+[profile.bench]
+debug = true
+strip = false
 
 [[bin]]
 name = "benches_dummy_bin"
 path = "./bin/main.rs"
 
 [[bench]]
-name = "wasmine_llvm_bench"
+name = "wasmine_llvm_bench_criterion"
+harness = false
+
+[[bench]]
+name = "wasmine_llvm_bench_iai"
 harness = false
 
 [[bench]]
