--- a/ir/Cargo.toml
+++ b/ir/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 [dependencies]
 thiserror = "1.0.60"
 wasm-types = { path = "../wasm-types" }
-lazy_static = "1.4.0"
+once_cell = "1.19.0"
