--- a/ir/Cargo.toml
+++ b/ir/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 thiserror = "1.0.60"
 wasm-types = { path = "../wasm-types" }
 once_cell = "1.19.0"
+
+[profile.release]
+lto = "fat"
