--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -11,3 +11,6 @@ wasm-types = { path = "../wasm-types" }
 ir = { path = "../ir" }
 loader = { path = "../loader" }
 itertools = "0.13.0"
+
+[profile.release]
+lto = "fat"
