--- a/runtime-interface/Cargo.toml
+++ b/runtime-interface/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 wasm-types = { path = "../wasm-types" }
 ir = { path = "../ir" }
 cee-scape = "0.2.0"
+
+[profile.release]
+lto = "fat"
