--- a/runtime-lib/Cargo.toml
+++ b/runtime-lib/Cargo.toml
@@ -9,27 +9,28 @@ bench = false
 
 [dependencies]
 nix = { version = "0.28.0", features = ["signal"] }
-thiserror = "1.0.61"
+thiserror = "1.0.63"
 wasm-types = { path = "../wasm-types" }
 ir = { path = "../ir" }
 parser = { path = "../parser" }
 loader = { path = "../loader" }
 interpreter = { path = "../interpreter", optional=true }
 libc = "0.2.155"
-log = "0.4.21"
+log = "0.4.22"
 llvm-gen = { path = "../llvm-gen", optional=true }
 runtime-interface = { path = "../runtime-interface" }
 cee-scape = "0.2.0"
-uuid = { version = "1.9.1", features = ["v4"] }
+uuid = { version = "1.10.0", features = ["v4"] }
 once_cell = "1.19.0"
-clap = { version = "4.5.13", features = ["derive"] }
+clap = { version = "4.5.14", features = ["derive"] }
 simplelog = "0.12.2"
+bitflags = "2.6.0"
+
+[dev-dependencies]
+rand = "0.8.5"
 
 [features]
 default = ["llvm", "interp"]
 llvm = ["dep:llvm-gen"]
 interp = ["dep:interpreter"]
 asm = []
-
-[dev-dependencies]
-rand = "0.8.5"
