--- a/ir/Cargo.toml
+++ b/ir/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 thiserror = "1.0.63"
 wasm-types = { path = "../wasm-types" }
 once_cell = "1.19.0"
-serde = { version = "1.0.208", features = ["derive"] }
+bitcode = "0.6.3"
