--- a/wasm-types/Cargo.toml
+++ b/wasm-types/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 [dependencies]
 once_cell = "1.19.0"
 rand = "0.8.5"
-serde = { version = "1.0.208", features = ["derive"] }
+bitcode = "0.6.3"
