--- a/benchmarks/speccpu/Cargo.toml
+++ b/benchmarks/speccpu/Cargo.toml
@@ -4,28 +4,31 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+module = { workspace = true }
+resource-buffer = { workspace = true }
+parser = { workspace = true }
 runtime-lib = { workspace = true }
-wasi = { workspace = true }
 llvm-gen = { workspace = true }
+wasi = { workspace = true }
 criterion = "0.5"
 wasmparser = "0.217.0"
 wasmtime = "25.0.1"
-wasmedge-sdk = { version = "0.14.0", default-features = false, features = ["standalone"] }
+wasmedge-sdk = { version = "0.14.0", default-features = false, features = ["standalone", "aot"] }
 iai-callgrind = "0.13.4"
 gag = "1.0.0"
 wasmtime-wasi = "25.0.1"
 once_cell = "1.19.0"
-
-
-[[bench]]
-name = "wasmine_llvm_bench_iai_519"
-path = "benches/speccpu/wasmine_llvm_bench_iai_519.rs"
-harness = false
+tempfile = "3.12.0"
 
 
 [[bench]]
 name = "wasmine_llvm_jit_criterion"
 path = "benches/speccpu/wasmine_llvm_jit_criterion.rs"
+harness = false
+
+[[bench]]
+name = "wasmine_llvm_aot_criterion"
+path = "benches/speccpu/wasmine_llvm_aot_criterion.rs"
 harness = false
 
 [[bench]]
@@ -39,11 +42,26 @@ path = "benches/speccpu/wasmtime_parser_criterion.rs"
 harness = false
 
 [[bench]]
-name = "wasmtime_criterion"
-path = "benches/speccpu/wasmtime_criterion.rs"
+name = "wasmtime_jit_criterion"
+path = "benches/speccpu/wasmtime_jit_criterion.rs"
+harness = false
+
+[[bench]]
+name = "wasmtime_aot_criterion"
+path = "benches/speccpu/wasmtime_aot_criterion.rs"
 harness = false
 
 [[bench]]
 name = "wasmine_parser_iai"
 path = "benches/speccpu/wasmine_parser_iai.rs"
+harness = false
+
+[[bench]]
+name = "wasmedge_jit_criterion"
+path = "benches/speccpu/wasmedge_jit_criterion.rs"
+harness = false
+
+[[bench]]
+name = "wasmedge_aot_criterion"
+path = "benches/speccpu/wasmedge_aot_criterion.rs"
 harness = false
