--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 libfuzzer-sys = "0.4.7"
 wasm-smith = "0.217.0"
 runtime-lib = { workspace = true }
+llvm-gen = { workspace = true }
 
 [package.metadata]
 cargo-fuzz = true
