--- a/crates/interpreter/Cargo.toml
+++ b/crates/interpreter/Cargo.toml
@@ -14,3 +14,4 @@ wasm-types = { workspace = true }
 parser = { workspace = true }
 module = { workspace = true }
 runtime-interface = { workspace = true }
+log.workspace = true
